--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>
         Github sann kyi tr pr 
     </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores totam accusamus architecto illum magni aperiam,
+     harum id molestias repellendus temporibus, quas veniam, ducimus a. Delectus optio id cumque neque ratione!</p>
     <script src="js/app.js"></script>
 </body>
 </html>
